--- a/doc/bugs/Discussion_link_not_translated_after_page_update.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_after_page_update.mdwn
@@ -10,7 +10,7 @@ Unfortunately I don't know another Polish user of ikiwiki, so I can't ask him
 to confirm the problem. Maybe Victor Moral can do it? Probably he uses ikiwiki
 with him Spanish translation.
 
---Pawel
+--[[Paweł|ptecza]]
 
 > Well, do you have your setup file configured to use a polish locale?
 > --[[Joey]]
@@ -20,8 +20,8 @@ with him Spanish translation.
 >> in my `ikiwiki.setup` file. I also ran `ikiwiki --setup ikiwiki.setup`
 >> and restarted my Apache2 server. Unfortunately, I can still see
 >> "Discussion" link instead of "Dyskusja" link after any page update
->> via WWW. --Pawel
+>> via WWW. --[[Paweł|ptecza]]
 
 >>> A setlocale issue. Now [[bugs/done]] --[[Joey]]
 
->>>> I can confirm. Now it works :) Thanks a lot for the fix! --Pawel
+>>>> I can confirm. Now it works :) Thanks a lot for the fix! --[[Paweł|ptecza]]
