--- a/doc/bugs/Error:_OpenID_failure:_time_bad_sig:.mdwn
+++ b/doc/bugs/Error:_OpenID_failure:_time_bad_sig:.mdwn
@@ -9,7 +9,7 @@ It occurs both for [getopenid.com](http://www.getopenid.com/)
 and [myopenid.com](http://www.myopenid.com/) servers I use.
 
 I'm reporting this, but I'm not sure whether a problem is with your
-ikiwiki or my OpenID servers. --Pawel
+ikiwiki or my OpenID servers. --[[Paweł|ptecza]]
 
 > I've seen this too, once or twice (using myopenid), and reauthenticating
 > fixed it -- so I can't reproduce it reliably to work on it. I think I've
