--- a/doc/bugs/disable_sub-discussion_pages.mdwn
+++ b/doc/bugs/disable_sub-discussion_pages.mdwn
@@ -9,7 +9,7 @@ I do want discussion subpage, but I don't want to have, for example: discussion/
 >>> Joey, I've just seen that you closed that bug in ikiwiki 1.37, but it seems
 >>> you fixed it only for English "discussion" page. The bug still occurs
 >>> for the international "discussion" pages. I have backported ikiwiki 1.40
->>> and I can see "Dyskusja" link on my Polish "dyskusja" pages. --Pawel
+>>> and I can see "Dyskusja" link on my Polish "dyskusja" pages. --[[Paweł|ptecza]]
 
 >>> Yes, I missed that string when internationalizing ikiwiki, fixed now.
 
@@ -45,7 +45,7 @@ I do want discussion subpage, but I don't want to have, for example: discussion/
 >>>>        make[1]: Leaving directory `/home/ptecza/svn/ikiwiki'
 >>>>        make: *** [build-stamp] Error 2
 
->>>> I think you should be notified about it :) --Pawel
+>>>> I think you should be notified about it :) --[[Paweł|ptecza]]
 
 >>>>> You have an unresolved svn conflict in some files in po, looks like.
 
@@ -54,4 +54,4 @@ I do want discussion subpage, but I don't want to have, for example: discussion/
 >>>>>> and I never use `svn status` command. Yes, now I know I should do it :)
 
 >>>>>> First I removed conflicting `sv.po` file and next I updated it and
->>>>>> it has resolved the problem. --Pawel
+>>>>>> it has resolved the problem. --[[Paweł|ptecza]]
