--- a/doc/bugs/find:_invalid_predicate___96__-L__39__.mdwn
+++ b/doc/bugs/find:_invalid_predicate___96__-L__39__.mdwn
@@ -23,4 +23,4 @@ because it seems that my `find` doesn't support `-L` option. I had to patch
 
 [[applied|done]], thanks --[[Joey]]
 
-> Thank you! :) --Pawel
+> Thank you! :) --[[Paweł|ptecza]]
