--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -22,7 +22,7 @@ as well. Also have I just created an account on this wiki as well?
 There is a way to ban ikiwiki users, but how to ban an IP address?
 For example if a bitchy anonymous is bombing our poll. I can use
 only Apache/iptables rules for this? Maybe it's related to
-[[ACL|todo/ACL]] request? --Pawel
+[[ACL|todo/ACL]] request? --[[Paweł|ptecza]]
 
 > Well, the polls are not something I would worry about much. I do plan to
 > [[add_IP_range_banning|todo/spam_fighting]], although I expect to wait until
@@ -34,4 +34,4 @@ only Apache/iptables rules for this? Maybe it's related to
 >> problems of Wikipedia with the vandals from Qatar. They demolished
 >> Qatar Wikipedia pages and the admins of Wikipedia had to ban all
 >> IP addresses of that country (fortunately Qatar has only one ISP).
->> --Pawel
+>> --[[Paweł|ptecza]]
