--- a/doc/todo/CSS_classes_for_links.mdwn
+++ b/doc/todo/CSS_classes_for_links.mdwn
@@ -32,7 +32,7 @@ for external links is enough for me :) Please look at my example:
 
 My best regards,
 
---Pawel
+--[[Paweł|ptecza]]
 
 > If you did not already know, you can achieve similar results using CSS3
 > selectors.  Eg: `a[href="http://www.foobar.com/"] { foobar: css }` or
@@ -53,4 +53,4 @@ My best regards,
 
 >> I've never written plugin for ikiwiki, but I can try if it's simple job :)
 >>
->> --Pawel
+>> --[[Paweł|ptecza]]
