--- a/doc/todo/refreshing_recentchanges_page.mdwn
+++ b/doc/todo/refreshing_recentchanges_page.mdwn
@@ -1,6 +1,6 @@
 What do you think about refreshing RecentChanges page (via Meta Refresh Tag)?
 It can be useful for users like me which rather prefer watching the last changes
-in WWW browser tab than subscribing to page. --Pawel
+in WWW browser tab than subscribing to page. --[[Paweł|ptecza]]
 
 > Depends, if it were done the time period should be made configurable.
 > Unwanted server load due to refeshing could be a problem for some.
@@ -10,7 +10,7 @@ in WWW browser tab than subscribing to page. --Pawel
 >> stupid and he will not set too short refresh period to kill his server :)
 >> I propose to add `recentchanges_refresh` variable in ikiwiki setup
 >> to setting refresh period. If it's not defined, then ikiwiki doesn't put
->> refresh meta tag into `recentchanges.tmpl`. Do you like it? ;) --Pawel
+>> refresh meta tag into `recentchanges.tmpl`. Do you like it? ;) --[[Paweł|ptecza]]
 
 >>> Seems reasonable --[[Joey]]
 
