--- a/doc/translation/discussion.mdwn
+++ b/doc/translation/discussion.mdwn
@@ -43,16 +43,16 @@ can I do diff for old and new `ikiwiki.pot` file and update only differences?
   >>>> OK, I hope I handle it :)
 
 4. What about "gettexting" button titles and link names? Do you really
-think that there should be hardcoded in ikiwiki templates? --Pawel
+think that there should be hardcoded in ikiwiki templates? --[[Paweł|ptecza]]
 
   > I don't know, really. Recai's approach seems to show promise.
 
   >> BTW, why does ikiwiki number my questions wrongly (1., 1., 1., 1.,
-  >> instead of 1., 2., 3., 4.)? Where have I made a Markdown mistake? --Pawel
+  >> instead of 1., 2., 3., 4.)? Where have I made a Markdown mistake? --[[Paweł|ptecza]]
 
   >>> My indentation mistake, I think. --[[Joey]]
 
-  >>>> Now it's perfect :) Thank you very much! --Pawel
+  >>>> Now it's perfect :) Thank you very much! --[[Paweł|ptecza]]
 
 ----
 
@@ -71,7 +71,7 @@ a message is. Then I have to check the sources again...
 So I have a request to Joey and the rest of ikiwiki coders:
 please write more verbose gettext messages and don't fear using
 subject there. It will be huge help for me and other ikiwiki
-translators. Thank you! :) --Pawel
+translators. Thank you! :) --[[Paweł|ptecza]]
 
 > Well, those messages are mostly laconic because they're output by
 > ikiwiki running in unix program mode and other tight situations, and 
@@ -94,4 +94,4 @@ translators. Thank you! :) --Pawel
 > size limits. This is generally done by adding comments in the pot file,
 > and I've turned that on, and added a few. --[[Joey]]
 
->> Thank you very much! It also will be a big help for me. --Pawel
+>> Thank you very much! It also will be a big help for me. --[[Paweł|ptecza]]
