--- a/doc/wikilink/discussion.mdwn
+++ b/doc/wikilink/discussion.mdwn
@@ -11,7 +11,7 @@ and HTML code if it's not necessary.
 BTW, ikiwiki doesn't displays the #foo anchor in the example
 ("To link to an anchor inside a page...") at [[WikiLink]] page...
 
---Pawel
+--[[Paweł|ptecza]]
 
 > No such syntax exists in markdown.  ikiwiki could certainly have a
 > [[preprocessor_directive|preprocessordirective]] for it, though.
