--- a/doc/banned_users/discussion.mdwn
+++ b/doc/banned_users/discussion.mdwn
@@ -1,6 +1,6 @@
 Jeremy, what about OpenID users? Do they also have Preferences?
 I don't use openid plugin in my ikiwiki, so I can't check
-whether OpenID users are stored in .ikiwiki/userdb file. --Pawel
+whether OpenID users are stored in .ikiwiki/userdb file. --[[Paweł|ptecza]]
 
 > OpenID users are first-class users. It's even possible to set the
 > adminuser config option to an OpenID. The preferences work the same as
@@ -10,7 +10,7 @@ whether OpenID users are stored in .ikiwiki/userdb file. --Pawel
 >> What about password of OpenID users? I can see in Preferences
 >> page that I can change my password there. Has it a sense?
 >> After all I store my OpenID password on OpenID server and I don't
->> want to do it on ikiwiki home page site. --Pawel
+>> want to do it on ikiwiki home page site. --[[Paweł|ptecza]]
 
 >>> This wiki is currently configured to use both passwordauth and openid, so
 >>> it's possible to create an account by signing in with an openid, then
@@ -24,4 +24,4 @@ whether OpenID users are stored in .ikiwiki/userdb file. --Pawel
 
 >>>> BTW, have you had a sleep this night? ;) Here, in Poland, the time is
 >>>> 1:30 PM (in your timezone is 7:30 AM), but we're just discussing for
->>>> about 3 hours... --Pawel
+>>>> about 3 hours... --[[Paweł|ptecza]]
