--- a/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
+++ b/doc/bugs/Convert___34__somehost.com/user__34___OpenID_at_RecentChanges_page.mdwn
@@ -10,24 +10,24 @@ for all OpenIDs is a good idea. What's your opinion?
 
 >> Thanks! What version of ikiwiki do you use at ikiwiki.info
 >> site? I still can see my "getopenid.com/ptecza" OpenID at
->> RecentChanges page there... --Pawel
+>> RecentChanges page there... --[[Paweł|ptecza]]
 
 >>> I use the latest version I trust enough..
 
 >>>> Joey, your regexp is not good enough. Now I can see "tecza [getopenid.com]",
 >>>> instead of "ptecza [getopenid.com]" (you cut first character of my login).
->>>> --Pawel
+>>>> --[[Paweł|ptecza]]
 
 >>>>> fixed now
 
->>>>>> Yes, now it's OK. Thank you very much! --Pawel
+>>>>>> Yes, now it's OK. Thank you very much! --[[Paweł|ptecza]]
 
 BTW, Happy New Year for you and Debian 'etch' and all ikiwiki
-users! :) --Pawel
+users! :) --[[Paweł|ptecza]]
 
 >> I've just noticed that '/' character in title of my wish
 >> wasn't escaped and ikiwiki created two pages, instead of one.
->> It's a bug, of course. --Pawel
+>> It's a bug, of course. --[[Paweł|ptecza]]
 
 >>> Sorry for confusing! I meant two files (directory and page),
 >>> instead of one (page).
@@ -37,8 +37,8 @@ users! :) --Pawel
 >>>>> Awesome! :) Thanks a lot!
 
 >>> BTW, I have some problems with singing in using getopenid.com
->>> server, so I also use myopenid.com server :) --Pawel
+>>> server, so I also use myopenid.com server :) --[[Paweł|ptecza]]
 
 >>>> They were having some glitches last week.. --[[Joey]]
 
->>>>> It's good to know :) --Pawel
+>>>>> It's good to know :) --[[Paweł|ptecza]]
