--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -23,7 +23,7 @@ on stable, although to get the CGI stuff working on stable, you will need
 to upgrade to a newer version of libcgi-formbuilder-perl, `3.05`.
 
 There is also an unofficial backport of ikiwiki for Debian 'sarge', provided by
-Pawel Tecza, at <http://gpa.net.icm.edu.pl/debian/>.
+Paweł Tęcza, at <http://gpa.net.icm.edu.pl/debian/>.
 
 Also. FreeBSD has ikiwiki in its
 [ports collection](http://www.freshports.org/www/ikiwiki/).
