--- a/doc/todo/Print_link.mdwn
+++ b/doc/todo/Print_link.mdwn
@@ -5,7 +5,7 @@ to have it in my ikiwiki :)
 Probably it's better to generate a page on the fly as a CGI
 (just the same like for RecentChanges page) when a user
 really needs it, instead to build static printable version
-for all ikiwiki pages. --Pawel
+for all ikiwiki pages. --[[Paweł|ptecza]]
 
 > I've always considered print links to be a sign of a badly designed web
 > site that looks ugly in a printer because it's ugly anywhere, so I may
@@ -36,7 +36,7 @@ for all ikiwiki pages. --Pawel
 > --[[Joey]]
 
 >> Maybe you could add `print.css` file for printable version? We just have
->> `local.css` file for a local styling. --Pawel
+>> `local.css` file for a local styling. --[[Paweł|ptecza]]
 
 >>> Sure, very doable, but the UI to switch to it when printing, I don't
 >>> know..
@@ -53,7 +53,7 @@ for all ikiwiki pages. --Pawel
 >>>> ikiwiki plugins.
 
 >>>> BTW, I also was thinkig about plugin to CVS support,
->>>> but unfortunately I don't have too much free time. --Pawel
+>>>> but unfortunately I don't have too much free time. --[[Paweł|ptecza]]
 
 >> You don't need a stylesheet-switching UI or a printer-friendly
 >> version; just link to a stylesheet with `media="print"`. --[[JoshTriplett]]
