web commit by http://chao.myopenid.com/

--- a/doc/ikiwikiusers/discussion.mdwn
+++ b/doc/ikiwikiusers/discussion.mdwn
@@ -9,3 +9,9 @@ Burying the project sites in with the rest tends to make people less likely to
 notice them and remark on their notability.  --[[JoshTriplett]]
 
 Great idea. --[[Joey]]
+
+Where can I get a webhost for ikiwiki? Could someone tell me?
+I am very much interested in ikiwiki yet My server does not support some Perl Modules that ikiwiki requires.
+So did some of you try install ikiwiki on DREAMHOST?
+Or any suggestion where can I get a host which supports ikiwiki?
+Thanks, --[[Chao]]
