--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (2.4) UNRELEASED; urgency=low
+
+  * Ikiwiki now outputs HTML 4.01, not XHTML 1.0. See the NEWS file for
+    details. Closes: #432045
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 08 Jul 2007 11:51:29 -0400
+
 ikiwiki (2.3) unstable; urgency=low
 
   * Corrected a typo in an error handler in the image plugin.
