--- a/doc/ikiwikiusers/discussion.mdwn
+++ b/doc/ikiwikiusers/discussion.mdwn
@@ -8,10 +8,20 @@ notability (UK Software Patents Info uses ikiwiki; the ion site uses ikiwiki).
 Burying the project sites in with the rest tends to make people less likely to
 notice them and remark on their notability.  --[[JoshTriplett]]
 
-Great idea. --[[Joey]]
+> Great idea. --[[Joey]]
 
 Where can I get a webhost for ikiwiki? Could someone tell me?
 I am very much interested in ikiwiki yet My server does not support some Perl Modules that ikiwiki requires.
 So did some of you try install ikiwiki on DREAMHOST?
 Or any suggestion where can I get a host which supports ikiwiki?
 Thanks, --[[Chao]]
+
+> I think that most users of ikiwiki are using it on servers they fully
+> control, or xen instances, or things like that. Some users with static
+> sites that don't need web editing might build them on their own machine,
+> and upload to a webhost service.
+> 
+> For getting it working on Dreamhost, it seems to me that if you can
+> install ikiwiki, which is mostly a bunch of perl modules, it must be
+> possible to install other perl modules also. I'm not a Dreamhost user, so
+> I don't know how though. What perl modules are missing? --[[Joey]]
