--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -178,32 +178,15 @@ My best regards,
 
 --[[Paweł|ptecza]]
 
+> This is not new behavior in 2.2 as far as I know. Ikiwiki was always 
+> interpreted "[ [foo bar] ]" as a preprocessor directive, with the
+> whitespace after the first word being the significant bit that
+> distinguishes it from a wikilink. If you want whitespace in a wikilink,
+> you use underscores; there's been a note at the end of [[WikiLink]] about
+> that for some time. --[[Joey]]
+
 ----
 
 # Build in OpenSolaris?
 
-I've learned I'm not yet clever enough to get IkiWiki to build in OpenSolaris (as running on a [Joyent Accelerator][ja]). Anyone figured this out already?
-
-I think problem lies mostly, if not entirely, in getting ikiwiki.cgi.c to compile in an OpenSolaris context (this is ikiwiki-2.2):
-
-> <code>$ ikiwiki --setup ~/etc/ikiwiki/ikiwiki-edit.setup  
-> [...]  
-> Error: failed to compile /home/username/domains/domain.tld/cgi-bin/ikiwiki.cgi.c at /opt/local/lib/perl5/site_perl/IkiWiki.pm line 104.
-BEGIN failed--compilation aborted at (eval 3) line 145.</code>
-
-More specifically, 
-
-> <code>$ /usr/sfw/bin/gcc ikiwiki.cgi.c  
-> Undefined               first referenced  
-> symbol                     in file  
-> asprintf                   /var/tmp//cczPaG7R.o  
-> ld: fatal: Symbol referencing errors. No output written to a.out  
-> collect2: ld returned 1 exit status</code>
-
-[ja]: <http://www.joyent.com/accelerator/technical-specifications/>
-
-Thanks, Joey et al., for a really cool tool.
-
---Mike
-
-> Looks like the ikiwiki wrapper uses asprintf.  glibc has that, and I think some other libc implementations have that, but apparently the Solaris libc does not.  The same problem will come up on other platforms that don't use glibc.  The ikiwiki wrapper needs to either avoid asprintf or use a portable asprintf implementation from somewhere like gnulib. --[[JoshTriplett]]
+Moved to [[bugs/build_in_opensolaris]] --[[Joey]]
