get confused. So it's best for ikiwiki to follow the compatability * Support building on systems that lack asprintf. * mercurial getctime is currently broken, apparently by some change in   mercurial version 0.9.4. Turn the failing test case into a TODO test case.

--- a/doc/bugs/build_in_opensolaris.mdwn
+++ b/doc/bugs/build_in_opensolaris.mdwn
@@ -31,3 +31,5 @@ Thanks, Joey et al., for a really cool tool.
 >> Of the possible patches to make this more portable, I'd generally prefer
 >> one that uses portable functions (safely), rather than one that includes
 >> an asprintf implementation in ikiwiki. --[[Joey]]
+
+[[bugs/done]]
