--- a/debian/changelog
+++ b/debian/changelog
@@ -2,10 +2,13 @@ ikiwiki (2.4) UNRELEASED; urgency=low
 
   * Make the toc plugin use html-compatible anchors. This is necessary since
     most web sites serve ikiwiki xhtml files as text/html and mozilla browsers
-    get confused. So it's best for ikiwiki to follow the compatability 
+    get confused. So it's best for ikiwiki to follow the compatability
     recommendations in appendix C of the XHTML spec. Closes: #432045
+  * Support building on systems that lack asprintf.
+  * mercurial getctime is currently broken, apparently by some change in
+    mercurial version 0.9.4. Turn the failing test case into a TODO test case.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 08 Jul 2007 12:54:55 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 08 Jul 2007 20:25:00 -0400
 
 ikiwiki (2.3) unstable; urgency=low
 
