add a link to patchqueue post

--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -14,7 +14,8 @@ the following projects will be worked on:
 * Wiki WYSIWYG Editor  
   by [[TaylorKillian]]
 * Creating a gallery of a bunch of images  
-  by [[ArpitJain]]
+  by [[ArpitJain]]  
+  (See [[patchqueue/Gallery_Plugin_for_Ikiwiki]])
 
 Students working on these projects are encouraged to add links to any blogs,
 patch repositories, etc that they will use.
