web commit by TaylorKillian

--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -12,7 +12,8 @@ the following projects will be worked on:
   by Ben Coffey  
   (See [[todo/fileupload/soc-proposal]])
 * Wiki WYSIWYG Editor  
-  by [[TaylorKillian]]
+  by [[TaylorKillian]]  
+  (See [[patchqueue/Wikiwyg_Plugin_for_IkiWiki]])
 * Creating a gallery of a bunch of images  
   by [[ArpitJain]]  
   (See [[patchqueue/Gallery_Plugin_for_Ikiwiki]])
