web commit by http://ptecza.myopenid.com/: * Response

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -185,6 +185,10 @@ My best regards,
 > you use underscores; there's been a note at the end of [[WikiLink]] about
 > that for some time. --[[Joey]]
 
+>> Hm. Probably you're right, but my WikiLinks with spaces work for me
+>> with ikiwiki <= 2.0 and don't work with ikiwiki 2.2. What's the explanation?
+>> --[[Paweł|ptecza]]
+
 ----
 
 # Build in OpenSolaris?
