--- a/doc/bugs/build_in_opensolaris.mdwn
+++ b/doc/bugs/build_in_opensolaris.mdwn
@@ -70,4 +70,5 @@ Thanks, Joey et al., for a really cool tool.
 
 > I added this after the rest of the #include's in Wrapper.pm, and it seems to work. --Blake
 
-[[bugs/done]]
+>> I have this marked [[bugs/done]] already, because I changed it in svn to
+>> not use asprintf --[[Joey]]
