--- a/doc/plugins/toc.mdwn
+++ b/doc/plugins/toc.mdwn
@@ -11,3 +11,10 @@ page will be shown; to control how many levels of headers are shown, use
 the `levels` parameter:
 
 	\[[toc levels=2]]
+
+The toc plugin will take the level of the first header as the topmost
+level, even if there are higher levels seen later in the file.
+
+The table of contents will be created as an ordered list. If you want
+an unordered list instead, you can change the list-style in your local
+style sheet.
