web commit by http://davrieb.livejournal.com/

--- a/doc/plugins/tag/discussion.mdwn
+++ b/doc/plugins/tag/discussion.mdwn
@@ -13,3 +13,7 @@ taking appropriate care to avoid looping forever.
 Thanks. That works fine.
 
 --Ben
+
+@Ben: could you publish the code for that?
+
+--David Riebenbauer <davrieb@htu.tugraz.at>
