--- a/doc/ikiwikiusers/discussion.mdwn
+++ b/doc/ikiwikiusers/discussion.mdwn
@@ -25,3 +25,7 @@ Thanks, --[[Chao]]
 > install ikiwiki, which is mostly a bunch of perl modules, it must be
 > possible to install other perl modules also. I'm not a Dreamhost user, so
 > I don't know how though. What perl modules are missing? --[[Joey]]
+
+Thanks for the reply Joey! ikiwiki is a fantastic wiki complier, though I do
+not have my own machine momentarily, i will pay close attention to its development.
+Hopefully I will be one of the ikiwiki users one day :) cheers --[[Chao]]
