--- a/doc/patchqueue/calendar_--_archive_browsing_via_a_calendar_frontend.mdwn
+++ b/doc/patchqueue/calendar_--_archive_browsing_via_a_calendar_frontend.mdwn
@@ -119,8 +119,8 @@ annual and monthly indices, for example, by using something like this
 sample from my I<archives/2006/01.mdwn> (warning: line split for
 readability):
 
-   [[meta title="Archives for 2006/01"]]
-   [[inline rootpage="blog" atom="no" rss="no" show="0"
+   \[[meta title="Archives for 2006/01"]]
+   \[[inline rootpage="blog" atom="no" rss="no" show="0"
      pages="blog/* and !*/Discussion and creation_year(2006)
             and creation_month(01)"
    ]]
