web commit by stm

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -16,6 +16,8 @@ Here's another one with *emphasised* text.
 
 do ë characters work? Sure.
 
+Nofle nofle
+
 OpenID test. It works!!
 
 Hupple hupple hupple hupple snork.
